# things-api

./: .gitignore  LICENSE  README.md  main.py  make_key.py  md_post.py  nginx-config  pyproject.toml  restart  settings_example.py  test.json  things-api.service  things_parser  things_parser.py  uplink_to_db.py
db/: things.db
