[project]
name = "things-api"
version = "0.1.0"
description = "Tools for storing and analyzing sensor and gateway data in the LoRaWAN Things Network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "concurrent-log-handler>=0.9.25",
    "fastapi[standard]>=0.115.8",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.34.0",
]
