[project]
name = "things-api"
version = "0.1.0"
description = "Tools for storing and analyzing sensor and gateway data in the LoRaWAN Things Network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "concurrent-log-handler>=0.9.25",
    "duckdb==1.1.3",
    "fastapi[standard]>=0.115.8",
    "fastparquet>=2024.11.0",
    "motherduck>=0.0.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.34.0",
]
